125 - fix spacing, tag display on publication

--- a/source/02-layouts/sidebar/_sidebar.scss
+++ b/source/02-layouts/sidebar/_sidebar.scss
@@ -55,6 +55,7 @@ $l-sidebar-gutter: 107px;
 
     .l-sidebar__sidebar {
       order: 2;
+      padding-bottom: gesso-spacing(4);
     }
   }
 }
